2009-02-18  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/symbol-db-engine-utils.c
	(sdb_util_load_symbol_pixbufs):
	added "method" to the symbol's type icons cache.

2009-02-18  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/test/Makefile.am:
	now benchmark test program won't be installed in system.

2009-02-18   Vincent Untz <vuntz@gnome.org>

	reviewed by: Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/test/benchmark.c (on_single_file_scan_end):
	fixed #572289 – Make code less ambiguous

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* Makefile.am:
	Fixed SF.net release target
	
	* plugins/project-wizard/templates/Makefile.am:
	Fixed build

=== 2.25.902 ===

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* NEWS:
	* configure.in:
	Updated for release
	
	* plugins/gbf-am/Makefile.am:
	* plugins/gbf-mkfile/Makefile.am:
	Fixed dist-clean issue

2009-02-16  Carl-Anton Ingmarsson  <ca.ingmarsson@gmail.com>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/file-loader/plugin.c (on_new_clicked), (on_open_clicked),
	(activate_plugin):
	#570820 – problem with gtk+ trunk

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* plugins/search/search-replace.c (on_message_clicked):
	#564942 – display project-relative path in search results pane

2009-02-16  Massimo Cora'  <mcora@svn.gnome.org>

	* configure.in:
	* plugins/symbol-db/Makefile.am:
	* plugins/symbol-db/test/Makefile.am:
	* plugins/symbol-db/test/main.c:
	removed outdated test file.

2009-02-12  Yang Hong  <hongyang@redflag-linux.com>
 
	* plugins/search/search-replace.c (create_dialog),
 	(on_search_expression_entry_changed):
 	#571381 – Seach button disabled if no files opened. 

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* plugins/file-manager/file-view.c (file_view_sort_model):
	#571733 – file manager should sort files case-insensitively

2009-02-16  Johannes Schmid  <jhs@gnome.org>

	* libanjuta/anjuta-plugin-description.c (parse_key_value):